Size main content correctly
Previously, if the breadcrumbs were too long, the main content would
overflow to the right. By removing this extra layer, that no longer
happens.

(I'll be honest, I only half-understand why, but it seems reasonable.)

--- a/resources/assets/css/inner/inner.less
+++ b/resources/assets/css/inner/inner.less
@@ -35,10 +35,6 @@
     > .left-nav {
       .flex(0 0 auto);
     }
-
-    > .main {
-      .flex(1 1 auto);
-    }
   }
 
   span.strikeout {
